--- a/usr/share/ddm/ddm.glade
+++ b/usr/share/ddm/ddm.glade
@@ -12,6 +12,11 @@
     <property name="can_focus">False</property>
     <property name="icon_name">document-save</property>
   </object>
+  <object class="GtkImage" id="imgLog">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="icon_name">text-x-generic</property>
+  </object>
   <object class="GtkImage" id="imgQuit">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -69,6 +74,7 @@
           <object class="GtkBox" id="box2">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="spacing">10</property>
             <child>
               <object class="GtkButton" id="btnQuit">
                 <property name="label" translatable="yes">Quit</property>
@@ -101,6 +107,24 @@
               </packing>
             </child>
             <child>
+              <object class="GtkButton" id="btnLog">
+                <property name="label" translatable="yes">Log</property>
+                <property name="width_request">100</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="margin_top">5</property>
+                <property name="image">imgLog</property>
+                <property name="always_show_image">True</property>
+                <signal name="clicked" handler="on_btnLog_clicked" swapped="no"/>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">2</property>
+              </packing>
+            </child>
+            <child>
               <object class="GtkButton" id="btnHelp">
                 <property name="label" translatable="yes">Help</property>
                 <property name="width_request">100</property>
@@ -116,7 +140,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">2</property>
+                <property name="position">3</property>
               </packing>
             </child>
             <child>
@@ -134,7 +158,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">3</property>
+                <property name="position">4</property>
               </packing>
             </child>
             <child>
@@ -152,7 +176,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">4</property>
+                <property name="position">5</property>
               </packing>
             </child>
           </object>
